--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,10 @@
-hello world
+<!doctype html>
+<html lang="en">
+<head>
+
+</head>
+<body>
+  <h1>Hello World</h1>
+  <script src="bundle.js"></script>
+</body>
+</html>
